# spatial-collection

./: .cruft.json  .gitignore  README.md  hatch.toml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
src/spatialcollection/: __init__.py  elements.py  io.py  models.py  spatialcollection.py  utils.py  views.py
tests/: test_basic.py  test_version.py
